--- a/opengraph/achievement_150.html
+++ b/opengraph/achievement_150.html
@@ -3,14 +3,14 @@
 		<meta property="og:type" content="game.achievement"/>
 		<meta property="og:title" content="150 Score!"/>
 		<meta property="og:description" content="Smash 150 friends in 1 round"/>
-		<meta property="og:url" content="http://www.friendsmash.com/opengraph/achievement_150.html"/>
-		<meta property="og:image" content="http://www.friendsmash.com/opengraph/images/achievement_150.png"/>
+		<meta property="og:url" content="https://github.com/Astarcorp/Friendsmash2/blob/master/opengraph/achievement_150.html"/>
+		<meta property="og:image" content="https://github.com/Astarcorp/Friendsmash2/blob/master/images/achievement_150.png"/>
 		<meta property="game:points" content="150"/>
-		<meta property="fb:appid" content="480369938658210"/>
+		<meta property="fb:appid" content="80663151393"/>
 		<title>Friend Smash! - Achivement: 150 Score!</title>
 	</head>
 	<body>
 		<p>Friend Smash! - Achivement: 150 Score!</p>
-		<img src="http://www.friendsmash.com/opengraph/images/achievement_150.png" />
+		<img src="https://github.com/Astarcorp/Friendsmash2/blob/master/images/achievement_150.png" />
 	</body>
 </html>
