--- a/opengraph/achievement_x3.html
+++ b/opengraph/achievement_x3.html
@@ -3,14 +3,14 @@
 		<meta property="og:type" content="game.achievement"/>
 		<meta property="og:title" content="3x Smash Bonus"/>
 		<meta property="og:description" content="Smash 3 friends in 1 hit"/>
-		<meta property="og:url" content="http://www.friendsmash.com/opengraph/achievement_x3.html"/>
-		<meta property="og:image" content="http://www.friendsmash.com/opengraph/images/achievement_x3.png"/>
-		<meta property="fb:appid" content="480369938658210"/>
+		<meta property="og:url" content="https://github.com/Astarcorp/Friendsmash2/blob/master/opengraph/achievement_x3.html"/>
+		<meta property="og:image" content="https://github.com/Astarcorp/Friendsmash2/blob/master/images/achievement_x3.png"/>
+		<meta property="fb:appid" content="80663151393"/>
 		<meta property="game:points" content="50"/>
 		<title>Friend Smash! - Achivement: 3x Combo</title>
 	</head>
 	<body>
 		<p>Friend Smash! - Achivement: 3x Combo</p>
-		<img src="http://www.friendsmash.com/opengraph/images/achievement_x3.png" />
+		<img src="https://github.com/Astarcorp/Friendsmash2/blob/master/images/achievement_x3.png" />
 	</body>
 </html>
