--- a/opengraph/achievement_50.html
+++ b/opengraph/achievement_50.html
@@ -3,13 +3,13 @@
 		<meta property="og:type" content="game.achievement"/>
 		<meta property="og:title" content="50 Score!"/>
 		<meta property="og:description" content="Smash 50 friends in 1 round"/>
-		<meta property="og:url" content="http://www.friendsmash.com/opengraph/achievement_50.html"/>
-		<meta property="og:image" content="http://www.friendsmash.com/opengraph/images/achievement_50.png"/>
+		<meta property="og:url" content="https://github.com/Astarcorp/Friendsmash2/blob/master/opengraph/achievement_50.html"/>
+		<meta property="og:image" content="https://github.com/Astarcorp/Friendsmash2/blob/master/images/achievement_50.png"/>
 		<meta property="game:points" content="50"/>
 		<title>Friend Smash! - Achivement: 50 Score!</title>
 	</head>
 	<body>
 		<p>Friend Smash! - Achivement: 50 Score!</p>
-		<img src="http://www.friendsmash.com/opengraph/images/achievement_50.png" />
+		<img src="https://github.com/Astarcorp/Friendsmash2/blob/master/images/achievement_50.png" />
 	</body>
 </html>
