--- a/opengraph/coin.html
+++ b/opengraph/coin.html
@@ -2,8 +2,8 @@
   <meta property="og:type" content="og:product" />
   <meta property="og:title" content="Friend Smash Coin!" />
   <meta property="og:plural_title" content="Friend Smash Coins!" />
-  <meta property="og:image" content="http://www.friendsmash.com/images/coin.png" />
-  <meta property="og:url" content="http://www.friendsmash.com/opengraph/coin.html" />
+  <meta property="og:image" content="https://github.com/Astarcorp/Friendsmash2/blob/master/images/coin.png" />
+  <meta property="og:url" content="https://github.com/Astarcorp/Friendsmash2/blob/master/opengraph/coin.html" />
   <meta property="og:description" content="Get some coins and buy more lives and bombs!" />
   <meta property="product:price:amount" content="0.10"/>
   <meta property="product:price:currency" content="USD"/>
