--- a/achievements/achievement_50.html
+++ b/achievements/achievement_50.html
@@ -6,6 +6,7 @@
 		<meta property="og:url" content="https://tradingwithfriendss.cloudcontrolled.com/achievements/achievement_50.html"/>
 		<meta property="og:image" content="https://tradingwithfriendss.cloudcontrolled.com/images/achievement_50.png"/>
 		<meta property="game:points" content="50"/>
+		<meta propery="fb:app_id" content="418284238273760"/>
 		<title>Trading with Friends!! - Achivement: 50 Score!</title>
 	</head>
 	<body>
